# pptx-mcp-server

./: .gitignore  README.md  pyproject.toml
pptx_mcp_server/: __init__.py  __main__.py  server.py
pptx_mcp_server/tools/: __init__.py  create.py  inventory.py  ooxml.py  rearrange.py  replace.py  thumbnail.py
